fixed invite button overlay on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1809,6 +1809,19 @@ iframe {
 }
 
 @media only screen and (max-width: 540px) {
+    label {
+        font-size: 1.3em;
+    }
+
+    .add-streams-heading-popular {
+        font-size: 1.1em;
+
+    }
+
+    .status-invite {
+        width: 50%;
+    }
+
     .room-title {
         font-size: 2em;
     }
